themistokles/ge/base/eupalinos/cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: apologia-to-eupalinos
spec:
  description: "Allow all pods in apologia namespace to access Eupalinos"
  endpointSelector:
    matchLabels:
      app: eupalinos
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: apologia
      toPorts:
        - ports:
            - port: "50060"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: olympia-to-eupalinos
spec:
  description: "Allow all pods in olympia namespace to access Eupalinos"
  endpointSelector:
    matchLabels:
      app: eupalinos
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: olympia
      toPorts:
        - ports:
            - port: "50060"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: makedonia-to-eupalinos
spec:
  description: "Allow all pods in makedonia namespace to access Eupalinos"
  endpointSelector:
    matchLabels:
      app: eupalinos
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: makedonia
      toPorts:
        - ports:
            - port: "50060"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: alexandreia-to-eupalinos
spec:
  description: "Allow all pods in alexandreia namespace to access Eupalinos"
  endpointSelector:
    matchLabels:
      app: eupalinos
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: alexandreia
      toPorts:
        - ports:
            - port: "50060"
              protocol: TCP
